Implemented much more of the filter and changed internal variable names. Consolidated tests into one test file for all the simple newtonian process examples.

--- a/tests/BUILD
+++ b/tests/BUILD
@@ -1,6 +1,6 @@
 cc_test(
-    name = "rising_fluid",
-    srcs = ["rising_fluid.cpp"],
+    name = "example_1",
+    srcs = ["example_1.cpp"],
     deps=[
         "//lib:kalman_filter",
         "//external:glog",
@@ -8,23 +8,3 @@ cc_test(
     ]
 )
 
-cc_test(
-    name = "falling_object",
-    srcs = ["falling_object.cpp"],
-    deps=[
-        "//lib:kalman_filter",
-        "//external:glog",
-        "//external:gtest_main",
-    ]
-)
-
-
-cc_test(
-    name = "moving_object",
-    srcs = ["moving_object.cpp"],
-    deps=[
-        "//lib:kalman_filter",
-        "//external:glog",
-        "//external:gtest_main",
-    ]
-)
