Added a new test based on the airplane tracking example. Doesn't build yet and I'm too lazy to fix it.

--- a/tests/BUILD
+++ b/tests/BUILD
@@ -8,3 +8,13 @@ cc_test(
     ]
 )
 
+cc_test(
+    name = "example_2",
+    srcs = ["example_2.cpp"],
+    deps=[
+        "//lib:kalman_filter",
+        "//external:glog",
+        "//external:gtest_main",
+    ]
+)
+
