Reworked the kalman filter class. Now needs extension by a derived class to make it application specific. Tests failing with NaNs unfortunately.

--- a/lib/BUILD
+++ b/lib/BUILD
@@ -6,3 +6,29 @@ cc_library(
     ],
     visibility = ["//visibility:public"]
 )
+
+cc_library(
+    name = "particle_motion_filter",
+    hdrs = ["particle_motion_filter.h"],
+    deps = [
+        ":kalman_filter",
+        ":types",
+        "//external:eigen",
+    ],
+    visibility = ["//visibility:public"],
+)
+
+cc_test(
+    name = "particle_motion_filter_test",
+    srcs = ["particle_motion_filter_test.cpp"],
+    deps = [
+        ":particle_motion_filter",
+        "//external:gtest_main",
+        "//external:glog",
+    ],
+)
+
+cc_library(
+    name = "types",
+    hdrs = ["types.h"],
+)
